/*
  Customer Offer

  This service domain orchestrates the processing of a product offer for a new or established &nbsp;customer. The offer process is defined specifically for the product or service being considered and can include actions such as document checks, collateral allocation, credit assessments, underwriting decisions, regulatory and procedural checks, eligibility checks, the use of internal and external specialist services (such as evaluations and legal advice).

  The version of the OpenAPI document: 10.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package com.redhat.mercury.customeroffer.com.redhat.mercury.customeroffer.api.bqagreementservice;

import "google/protobuf/empty.proto";
import public "com.redhat.mecury.customeroffer.model/customer_offer_procedure.proto";
import public "com.redhat.mecury.customeroffer.model/http_error.proto";
import public "com.redhat.mecury.customeroffer.model/update_agreement_request.proto";
import public "com.redhat.mecury.customeroffer.model/update_agreement_response.proto";

service BQAgreementService {
  rpc RetrieveAgreement (RetrieveAgreementRequest) returns (CustomerOfferProcedure);

  rpc UpdateAgreement (UpdateAgreementRequest) returns (UpdateAgreementResponse);

}

message RetrieveAgreementRequest {
  string customerofferId = 1;
  string agreementId = 2;

}

message UpdateAgreementRequest {
  string customerofferId = 1;
  string agreementId = 2;
  UpdateAgreementRequest updateAgreementRequest = 3;

}

