/*
  Customer Offer

  This service domain orchestrates the processing of a product offer for a new or established &nbsp;customer. The offer process is defined specifically for the product or service being considered and can include actions such as document checks, collateral allocation, credit assessments, underwriting decisions, regulatory and procedural checks, eligibility checks, the use of internal and external specialist services (such as evaluations and legal advice).

  The version of the OpenAPI document: 10.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package com.redhat.mercury.customeroffer.v10;

import public "v10/model/initiate_customer_offer_procedure_response_customer_offer_procedure.proto";

message RequestCustomerOfferProcedureResponse {

  InitiateCustomerOfferProcedureResponseCustomerOfferProcedure CustomerOfferProcedure = 355289975;

}
